update plugin versions, fix failing jdk bundle build Signed-off-by:Lukas Jungmann <lukas.jungmann@oracle.com>